--- a/sub/sub1_brand.html
+++ b/sub/sub1_brand.html
@@ -24,18 +24,18 @@
             <div class="inner_header">
                 <div class="util_wrap">
                     <ul class="util">
-                        <li><a href="#"><img src="../images/sub1/search_g.png" alt="search"></a></li>
-                        <li><a href="#"><img src="../images/sub1/personal_g.png" alt="personal"></a></li>
-                        <li><a href="#"><img src="../images/sub1/cart_g.png" alt="cart"></a></li>
+                        <li><a href="javascript:return false;"><img src="../images/sub1/search_g.png" alt="search"></a></li>
+                        <li><a href="javascript:return false;"><img src="../images/sub1/personal_g.png" alt="personal"></a></li>
+                        <li><a href="javascript:return false;"><img src="../images/sub1/cart_g.png" alt="cart"></a></li>
                     </ul>
                 </div>
                 <div class="gnb_wrap">
                     <ul class="gnb">
-                        <li class="ul_1"><a href="#">BRAND</a></li>
-                        <li><a href="#">PRODUCTS</a></li>
+                        <li class="ul_1"><a href="./sub1_brand.html">BRAND</a></li>
+                        <li><a href="sub2_products.html">PRODUCTS</a></li>
                         <li><h1><a href="../index.html"><img src="../images/sub1/green_logo.png"></a></li></h1>
-                        <li><a href="#">EVENT</a></li>
-                        <li><a href="#">COMMUNITY</a></li>
+                        <li><a href="./sub3_evnet.html">EVENT</a></li>
+                        <li><a href="./sub4_communuty.html">COMMUNITY</a></li>
                     </ul>
                     <div class="submenu">
                         <div class="inner_submenu">
@@ -45,21 +45,21 @@
                                 <li><a href="sub1_brand.html#section5">INGREDIENT</a></li>
                             </ul>
                             <ul>
-                                <li><a href="#">BRAND MESSAGE</a></li>
-                                <li><a href="#">BRAND STORY</a></li>
-                                <li><a href="#">INGREDIENT</a></li>
+                                <li><a href="sub2_products.html#section2">AROMA THERAPY</a></li>
+                                <li><a href="sub2_products.html#section3">BODY CARE</a></li>
+                                <li><a href="sub2_products.html#section4">HOME CARE</a></li>
                             </ul>
                             <ul>
                             </ul>
                             <ul>
-                                <li><a href="#">BRAND MESSAGE</a></li>
-                                <li><a href="#">BRAND STORY</a></li>
-                                <li><a href="#">INGREDIENT</a></li>
+                                <li><a href="./sub3_evnet.html#section1">CAMPAIGN</a></li>
+                                <li><a href="./sub3_evnet.html#section2">ONEDAY CLASS</a></li>
+                                <li><a href="./sub3_evnet.html#section3">EVENT</a></li>
                             </ul>
                             <ul>
-                                <li><a href="#">BRAND MESSAGE</a></li>
-                                <li><a href="#">BRAND STORY</a></li>
-                                <li><a href="#">INGREDIENT</a></li>
+                                <li><a href="./sub4_communuty.html#section1">NOTICE</a></li>
+                                <li><a href="./sub4_communuty.html#section1">FAQ</a></li>
+                                <li><a href="./sub4_communuty.html#section1">STORE</a></li>
                             </ul>
                         </div>
                     </div>
@@ -88,7 +88,6 @@
                 <div class="line"></div>
             </div>
             <div class="bg_fix"></div>
-            <div></div>
         </div><!--section1_E-->
         <div id="section2"><!--section2_S-->
             <div class="inner_section2">
@@ -412,7 +411,7 @@
         <div id="footer">
             <div class="inner_footer">
                 <ul class="footer_wrap">
-                    <li><h1><a href="#"><img src="../images/sub1/foot_logo.png" alt="logo"></a></h1></li>
+                    <li><h1><a href="/index.html"><img src="../images/sub1/foot_logo.png" alt="logo"></a></h1></li>
                     <li>
                         <h3>COMPANY INFO</h3>
                         <p>(주)드랍포레스트 ㅣ 사업자등록번호: 000-00-00000 ㅣ 대표자:김상아
@@ -435,10 +434,10 @@
                     <li>
                         <h3>FOLLOW US</h3>
                         <ul class="sns">
-                            <li><a href="#"><img src="../images/sub1/f_insta.png" alt="imsta"></a></li>
-                            <li><a href="#"><img src="../images/sub1/f_youtube.png" alt="youtube"></a></li>
-                            <li><a href="#"><img src="../images/sub1/f_kakao.png" alt="kakao"></a></li>
-                            <li><a href="#"><img src="../images/sub1/f_facebook.png" alt="facebook"></a></li>
+                            <li><a href="javascript:return false;"><img src="../images/sub1/f_insta.png" alt="imsta"></a></li>
+                            <li><a href="javascript:return false;"><img src="../images/sub1/f_youtube.png" alt="youtube"></a></li>
+                            <li><a href="javascript:return false;"><img src="../images/sub1/f_kakao.png" alt="kakao"></a></li>
+                            <li><a href="javascript:return false;"><img src="../images/sub1/f_facebook.png" alt="facebook"></a></li>
                         </ul>
                     </li>
                 </ul>
