--- a/sub/sub2_products.html
+++ b/sub/sub2_products.html
@@ -24,9 +24,9 @@
             <div class="inner_header">
                 <div class="util_wrap">
                     <ul class="util">
-                        <li><a href="#"><img src="../images/sub1/search_g.png" alt="search"></a></li>
-                        <li><a href="#"><img src="../images/sub1/personal_g.png" alt="personal"></a></li>
-                        <li><a href="#"><img src="../images/sub1/cart_g.png" alt="cart"></a></li>
+                        <li><a href="javascript:return false;"><img src="../images/sub1/search_g.png" alt="search"></a></li>
+                        <li><a href="javascript:return false;"><img src="../images/sub1/personal_g.png" alt="personal"></a></li>
+                        <li><a href="javascript:return false;"><img src="../images/sub1/cart_g.png" alt="cart"></a></li>
                     </ul>
                 </div>
                 <div class="gnb_wrap">
@@ -91,14 +91,14 @@
                                 <div class="cover_text">
                                     <p>오로지 나에게 집중할 수 있는 <br>샤워시간을 기분좋은 힐링의 <br>순간으로 만들어줍니다.</p>
                                     <p>하루의 마무리로 잔잔한 위로를 <br>경험해보세요.</p>
-                                    <div class="in_btn"><a href="#"><img src="../images/sub2/cart_w.png" alt=""></a></div>
+                                    <div class="in_btn"><a href="javascript:return false;"><img src="../images/sub2/cart_w.png" alt="cart_icon"></a></div>
                                 </div>
                             </div>
                         </div>
-                        <div class="btn"><a href="#">아로마 밸런싱 클렌징 바디솝</a></div>
+                        <div class="btn"><a href="sub2_products.html#section3">아로마 밸런싱 클렌징 바디솝</a></div>
                     </div>
                     <div class="bp_df right">
-                        <div class="btn"><a href="#">아로마 포레스트 디퓨저</a></div>
+                        <div class="btn"><a href="sub2_products.html#section4">아로마 포레스트 디퓨저</a></div>
                         <div class="hover_wrap">
                             <div class="img_wrap"><img src="../images/sub2/bestpd2.png" alt="diffuser"></div>
                             <div class="cover">
@@ -106,7 +106,7 @@
                                 <div class="cover_text">
                                     <p>자연에서 온전한 자유를 느끼고 <br>본연의 향을 경험할 수 있도록 <br>신선함으로 가득 채운 향을 표현합니다.</p>
                                     <p>나만의 공간을 잔잔하고 아늑한 <br>숲의 향기로 채워보세요.</p>
-                                    <div class="in_btn"><a href="#"><img src="../images/sub2/cart_w.png" alt=""></a></div>
+                                    <div class="in_btn"><a href="javascript:return false;"><img src="../images/sub2/cart_w.png" alt=""></a></div>
                                 </div>
                             </div>
                         </div>
@@ -125,12 +125,12 @@
                                         <br>100% PURE 에센셜 오일입니다.</p>
                                     <p>살아있는 식물의 중요한 역할을 하는 파트의 
                                         <br>신선하고 농축된 에너지를 경험해보세요.</p>
-                                    <div class="in_btn"><a href="#"><img src="../images/sub2/cart_w.png" alt=""></a></div>
+                                    <div class="in_btn"><a href="javascript:return false;"><img src="../images/sub2/cart_w.png" alt=""></a></div>
                                 </div>
                             </div>
                         </div>
                         
-                        <div class="btn"><a href="#">에센셜 오일 10ML - 라벤더</a></div>
+                        <div class="btn"><a href="sub2_products.html#section2">에센셜 오일 10ML - 라벤더</a></div>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                         <p>100% 자연원료의 힘, 일상을 깨우는 에너지 한 방울로
                             <br>홀리스틱 아로마테라피를 경험해보세요.
                         </p>
-                        <div class="round_btn"><a href="#">more products</a></div>
+                        <div class="round_btn"><a href="javascript:return false;">more products</a></div>
                     </div>
                 </div>
                 <ul class="right_at product">
@@ -158,7 +158,7 @@
                         <div class="pd_cover">
                             <p>라벤더 에센셜오일 10ML</p>
                             <p>18,000\</p>
-                            <div class="pd_btn"><a href="#">구매하기</a></div>
+                            <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                         </div>
                     </li> 
                     <li>
@@ -166,7 +166,7 @@
                         <div class="pd_cover">
                             <p>유칼립투스 에센셜오일 10ML</p>
                             <p>18,000\</p>
-                            <div class="pd_btn"><a href="#">구매하기</a></div>
+                            <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                         </div>
                     </li>
                     <li>
@@ -174,7 +174,7 @@
                         <div class="pd_cover">
                             <p>샌달우드 에센셜오일 10ML</p>
                             <p>18,000\</p>
-                            <div class="pd_btn"><a href="#">구매하기</a></div>
+                            <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                         </div>
                     </li>
                 </ul>
@@ -184,7 +184,7 @@
                         <div class="pd_cover">
                             <p>라벤더 페이셜오일 30ML</p>
                             <p>24,000\</p>
-                            <div class="pd_btn"><a href="#">구매하기</a></div>
+                            <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                         </div> 
                     </li>
                     <li>
@@ -192,7 +192,7 @@
                         <div class="pd_cover">
                             <p>아로마 릴리즈 밤</p>
                             <p>24,000\</p>
-                            <div class="pd_btn"><a href="#">구매하기</a></div>
+                            <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                         </div> 
                     </li>
                     <li>
@@ -200,7 +200,7 @@
                         <div class="pd_cover">
                             <p>페퍼민트&유칼립투스 롤온스</p>
                             <p>18,000\</p>
-                            <div class="pd_btn"><a href="#">구매하기</a></div>
+                            <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                         </div> 
                     </li>
                     <li>
@@ -208,7 +208,7 @@
                         <div class="pd_cover">
                             <p>아로마테라피 디퓨징 스톤</p>
                             <p>13,000\</p>
-                            <div class="pd_btn"><a href="#">구매하기</a></div>
+                            <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                         </div> 
                     </li>
                     <li>
@@ -216,7 +216,7 @@
                         <div class="pd_cover">
                             <p>우드 시너지 괄사</p>
                             <p>28,000\</p>
-                            <div class="pd_btn"><a href="#">구매하기</a></div>
+                            <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                         </div> 
                     </li>
                 </ul> 
@@ -230,7 +230,7 @@
                     <p>지친 일상에 무거워진 몸을 가볍게,
                         <br>고요하고 따사로운 휴양지에서의 휴식의 순간을 선사합니다. 
                     </p>
-                    <div class="round_btn"><a href="#">more products</a></div>
+                    <div class="round_btn"><a href="javascript:return false;">more products</a></div>
                 </div>
                 <div class="product_imgwrap right">
                     <img src="../images/sub2/body_main.png" alt="body_main" class="body_main">
@@ -246,7 +246,7 @@
                             <div class="pd_cover">
                                 <p>오가닉 그린 바디워시 - 샌달우드</p>
                                 <p>28,000\</p>
-                                <div class="pd_btn"><a href="#">구매하기</a></div>
+                                <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                             </div>
                         </li>
                         <li>
@@ -254,7 +254,7 @@
                             <div class="pd_cover">
                                 <p>오가닉 그린 바디워시 - 버가못</p>
                                 <p>28,000\</p>
-                                <div class="pd_btn"><a href="#">구매하기</a></div>
+                                <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                             </div>
                         </li>
                         <li>
@@ -262,7 +262,7 @@
                             <div class="pd_cover">
                                 <p>오가닉 그린 바디워시 - 유칼립투스</p>
                                 <p>28,000\</p>
-                                <div class="pd_btn"><a href="#">구매하기</a></div>
+                                <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                             </div>
                         </li>
                     </ul>
@@ -272,7 +272,7 @@
                             <div class="pd_cover">
                                 <p>아로마 밸런싱 바디솝</p>
                                 <p>22,000\</p>
-                                <div class="pd_btn"><a href="#">구매하기</a></div>
+                                <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                             </div>
                         </li>
                         <li>
@@ -280,7 +280,7 @@
                             <div class="pd_cover">
                                 <p>친환경 비누망</p>
                                 <p>3,000\</p>
-                                <div class="pd_btn"><a href="#">구매하기</a></div>
+                                <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                             </div>
                         </li>
                         <li>
@@ -288,7 +288,7 @@
                             <div class="pd_cover">
                                 <p>린넨 샤워타올</p>
                                 <p>7,000\</p>
-                                <div class="pd_btn"><a href="#">구매하기</a></div>
+                                <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                             </div>
                         </li>
                     </ul>
@@ -308,7 +308,7 @@
                     <p>내면의 나를 만나기 위한
                         <br>나만의 온전한 휴식처를 만들어보세요.
                     </p>
-                    <div class="round_btn"><a href="#">more products</a></div>
+                    <div class="round_btn"><a href="javascript:return false;">more products</a></div>
                 </div>
             </div>
             <div class="living_section">
@@ -319,7 +319,7 @@
                             <div class="pd_cover">
                                 <p>아로마 포레스트 디퓨저</p>
                                 <p>19,800\</p>
-                                <div class="pd_btn"><a href="#">구매하기</a></div>
+                                <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                             </div>
                         </li>
                         <li>
@@ -327,7 +327,7 @@
                             <div class="pd_cover">
                                 <p>포레스트 릴렉싱 룸스프레이</p>
                                 <p>24,000\</p>
-                                <div class="pd_btn"><a href="#">구매하기</a></div>
+                                <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                             </div>
                         </li>
                         <li>
@@ -335,7 +335,7 @@
                             <div class="pd_cover">
                                 <p>아로마틱 세라믹 캔들</p>
                                 <p>18,000\</p>
-                                <div class="pd_btn"><a href="#">구매하기</a></div>
+                                <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                             </div>
                         </li>
                         <li>
@@ -343,7 +343,7 @@
                             <div class="pd_cover">
                                 <p>드랍포레스트 파우치</p>
                                 <p>12,000\</p>
-                                <div class="pd_btn"><a href="#">구매하기</a></div>
+                                <div class="pd_btn"><a href="javascript:return false;">구매하기</a></div>
                             </div>
                         </li>
                     </ul>
@@ -356,7 +356,7 @@
         <div id="footer"><!--footer-S-->
             <div class="inner_footer">
                 <ul class="footer_wrap">
-                    <li><h1><a href="#"><img src="../images/sub1/foot_logo.png" alt="logo"></a></h1></li>
+                    <li><h1><a href="../index.html"><img src="../images/sub1/foot_logo.png" alt="logo"></a></h1></li>
                     <li>
                         <h3>COMPANY INFO</h3>
                         <p>(주)드랍포레스트 ㅣ 사업자등록번호: 000-00-00000 ㅣ 대표자:김상아
@@ -379,10 +379,10 @@
                     <li>
                         <h3>FOLLOW US</h3>
                         <ul class="sns">
-                            <li><a href="#"><img src="../images/sub1/f_insta.png" alt="imsta"></a></li>
-                            <li><a href="#"><img src="../images/sub1/f_youtube.png" alt="youtube"></a></li>
-                            <li><a href="#"><img src="../images/sub1/f_kakao.png" alt="kakao"></a></li>
-                            <li><a href="#"><img src="../images/sub1/f_facebook.png" alt="facebook"></a></li>
+                            <li><a href="javascript:return false;"><img src="../images/sub1/f_insta.png" alt="imsta"></a></li>
+                            <li><a href="javascript:return false;"><img src="../images/sub1/f_youtube.png" alt="youtube"></a></li>
+                            <li><a href="javascript:return false;"><img src="../images/sub1/f_kakao.png" alt="kakao"></a></li>
+                            <li><a href="javascript:return false;"><img src="../images/sub1/f_facebook.png" alt="facebook"></a></li>
                         </ul>
                     </li>
                 </ul>
