--- a/sub/sub4_communuty.html
+++ b/sub/sub4_communuty.html
@@ -93,47 +93,47 @@
                     <h2>공지사항</h2>
                     <ul class="notice_list">
                         <li class="num">17</li>
-                        <li class="notice_title"><a href="#">추석연휴 배송안내</a></li>
+                        <li class="notice_title"><a href="javascript:return false;">추석연휴 배송안내</a></li>
                         <li>드랍포레스트</li>
                         <li>2023.09.18</li>
                     </ul>
                     <ul class="notice_list">
                         <li class="num">16</li>
-                        <li class="notice_title"><a href="#">8월 베스트 리뷰 당첨자 안내</a></li>
+                        <li class="notice_title"><a href="javascript:return false;">8월 베스트 리뷰 당첨자 안내</a></li>
                         <li>드랍포레스트</li>
                         <li>2023.09.01</li>
                     </ul>
                     <ul class="notice_list">
                         <li class="num">15</li>
-                        <li class="notice_title"><a href="#">7월 베스트 리뷰 당첨자 안내</a></li>
+                        <li class="notice_title"><a href="javascript:return false;">7월 베스트 리뷰 당첨자 안내</a></li>
                         <li>드랍포레스트</li>
                         <li>2023.08.02</li>
                     </ul>
                     <ul class="notice_list">
                         <li class="num">14</li>
-                        <li class="notice_title"><a href="#">배송지연 안내</a></li>
+                        <li class="notice_title"><a href="javascript:return false;">배송지연 안내</a></li>
                         <li>드랍포레스트</li>
                         <li>2023.06.21</li>
                     </ul>
                     <ul class="notice_list">
                         <li class="num">13</li>
-                        <li class="notice_title"><a href="#">가정의날 이벤트 할인품목 안내</a></li>
+                        <li class="notice_title"><a href="javascript:return false;">가정의날 이벤트 할인품목 안내</a></li>
                         <li>드랍포레스트</li>
                         <li>2023.05.05</li>
                     </ul>
                     <ul class="notice_list">
                         <li class="num">12</li>
-                        <li class="notice_title"><a href="#">지구의날 이벤트 안내</a></li>
+                        <li class="notice_title"><a href="javascript:return false;">지구의날 이벤트 안내</a></li>
                         <li>드랍포레스트</li>
                         <li>2023.04.21</li>
                     </ul>
                     <ul class="notice_list">
                         <li class="num">11</li>
-                        <li class="notice_title"><a href="#">단종 상품 안내</a></li>
+                        <li class="notice_title"><a href="javascript:return false;">단종 상품 안내</a></li>
                         <li>드랍포레스트</li>
                         <li>2023.03.05</li>
                     </ul>
-                    <div class="btn"><a href="#section1">VIEW MORE</a></div>
+                    <div class="btn"><a href="javascript:return false;">VIEW MORE</a></div>
                 </div>
                 <div id="Board02" class="box1_1	board" style="display:none;">
                     <h2>자주하는 질문</h2>
